--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,11 @@ version: 0.2
 phases:
   build:
     commands:
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/e1p3v9w8
-      - docker build -t task .
-      - docker tag flask:latest public.ecr.aws/e1p3v9w8/flask:latest
-      - docker push public.ecr.aws/e1p3v9w8/flask:latest
+      - aws --v
+      - docker info
+      # - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/e1p3v9w8
+      # - docker build -t task .
+      # - docker tag flask:latest public.ecr.aws/e1p3v9w8/flask:latest
+      # - docker push public.ecr.aws/e1p3v9w8/flask:latest
 
 
