--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       - aws --v
       - docker info
       # - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/e1p3v9w8
-      - docker build -t task .
+      - docker build -t flask .
       - docker tag flask:latest public.ecr.aws/e1p3v9w8/flask:latest
       - docker push public.ecr.aws/e1p3v9w8/flask:latest
 
